# SynSmith

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  attrforge_project_description.md  pyproject.toml
attrforge/: __init__.py  _dotenv.py  baselines.py  cli.py  generator.py  llm.py  llm_batch.py  loop.py  metrics.py  planner.py  schema.py  updater.py
attrforge/critics/: __init__.py  auditor.py  discriminator.py  verifier.py
attrforge/eval/: __init__.py  ensemble.py
attrforge/prompts/: __init__.py  templates.py
docs/: attrforge.docx  index.html  style.css  synsmith.docx  synsmith_2col.docx
examples/: run_pilot.py
examples/customer_support/: config.echo.yaml  config.yaml  initial_prompt.txt  real_examples.jsonl  schema.yaml
examples/sst2/: config.yaml  real_examples.jsonl  schema.yaml
paper/: _per_seed_f1.json  _per_seed_stats.py  bib_validation.md  review_v5.md  sanity_audit.md
scripts/: _abstract_wc.py  _splits_resolver.py  aggregate_task69.py  aggregate_task73.py  aggregate_three_tasks.py  augmentation_eval.py  check_abstract_count.py  confusion_and_ensemble.py  derive_topic_axis.py  diversity_metrics.py  ensemble_deep.py  eval_smoke_downstream.py  experiment_audit.py  make_headline_fig.py  mmd_per_feature_space.py  move_ablations_to_appendix.py  move_appendix_after_refs.py  multi_classifier_aug_eval.py  partial_sweep_status.py  per_class_aug_eval.py  per_class_ensemble_eval.py  per_critic_attribution.py  plot_per_class_ensemble.py  posthoc_audit.py  reaudit_fixed.py  rename_baselines_to_display.py  render_docx_pages.py  run_experiments.py  scarce_real_eval.py  scendi_score.py  smoke_fixes_f1_f6.py  smoke_paired_seed17.py  smoke_three_tasks.py  stacking_ensemble.py  sweep_three_tasks.py  v297_compare.py  verify_docx.py
synsmith/: baselines.py  loop.py
tests/: test_generator_vs.py  test_llm_batch.py  test_loop_offline.py  test_planner.py  test_schema.py  test_tasks_69_73_74_paths.py
(+2339 files in other folders)
