[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attrforge"
version = "0.1.0"
description = "Multi-Objective Prompt Debugging for Realistic, Diverse, and Attribute-Controlled Synthetic Data Generation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AttrForge Contributors" }]
keywords = [
    "synthetic-data",
    "llm",
    "prompt-optimization",
    "data-augmentation",
    "active-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "tenacity>=8.2",
    "typer>=0.12",
    "rich>=13.7",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "sentence-transformers>=2.7; python_version < '3.13'",
]

[project.optional-dependencies]
openai = ["openai>=1.30"]
anthropic = ["anthropic>=0.30"]
all = ["openai>=1.30", "anthropic>=0.30"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
attrforge = "attrforge.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/attrforge"
Issues = "https://github.com/yourusername/attrforge/issues"

[tool.setuptools.packages.find]
include = ["attrforge*"]

[tool.setuptools.package-data]
attrforge = ["prompts/*.txt", "py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
